# AutoJob

./: .gitignore  README.md
authentication_server/src/: main.rs
authentication_server/src/api/: authenticate_api.rs  enroll_api.rs
authentication_server/src/model/: login_model.rs  refresh_model.rs  user_model.rs
authentication_server/src/repository/: mongodb_repo.rs
authentication_server/src/utils/: jwt.rs  mod.rs
backend/: Cargo.toml  README.md
backend/src/: db_connection.rs  main.rs  serverInstall.sh
backend/src/api/: api_helper.rs  job_estimate_api.rs  jwt_api.rs  library_api.rs  material_library_api.rs  mod.rs  scraper_api.rs  user_api.rs  user_estimate_api.rs
backend/src/model/: estimate_model.rs  form_data_model.rs  image_model.rs  jwt_model.rs  library_model.rs  material_model.rs  mod.rs  model_trait.rs  product_model.rs  scrape_model.rs  scraper_model.rs  upload_model.rs  user_model.rs
backend/src/repository/: mod.rs  mongodb_estimate_repo.rs  mongodb_repo.rs  mongodb_user_repo.rs
backend/src/scraper/: main.py  scraper.py
backend/src/ssl/: cert.pem  key.pem
backend/src/utils/: mod.rs  token_extractor.rs  token_middleware.rs
emailer/: package-lock.json  package.json  webpack.config.js
emailer/emails/: index.tsx
emailer/src/: index.js
emailer/src/emails/: EmailNotification.jsx
emailer/src/pdfs/: BillPDF.js
estimator/: package-lock.json  package.json
estimator/src/: App.css  App.js  setupProxy.js
estimator/src/components/: AppSwitcher.css  AppSwitcher.js  EstimateInfo.css  EstimateInfo.js  Estimator.css  Estimator.js  ImageCarousel.css  (+3 more)
frontend/: .env  package-lock.json  package.json
frontend/src/: App.css  App.js
resource_server/: Cargo.toml
resource_server/src/: main.rs
resource_server/src/api/: api_helper.rs  job_estimate_api.rs  jwt_api.rs  library_api.rs  mod.rs  schema_api.rs  scraper_api.rs  user_estimate_api.rs
resource_server/src/model/: billable_model.rs  estimate_model.rs  image_model.rs  jwt_model.rs  library_model.rs  mod.rs  model_trait.rs  schema_model.rs  scraper_model.rs  user_model.rs
resource_server/src/repository/: check_mongodb_running.sh  mongodb_repo.rs
resource_server/src/utils/: mod.rs  token_extractor.rs  token_middleware.rs
scraper_cache/: Cargo.toml
scraper_cache/src/: main.rs  serverInstall.sh
user_authentication/: Cargo.toml
user_authentication/src/: main.rs
web_scraper_python/: README.md
web_scraper_python/src/: main.py  scraper.py
(+109 files in other folders)
