[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.6.1"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1.0.188" # Used in the Map Data into Structs section
futures = "0.3.28"
