[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
mongodb = { version = "2.8.0" }
serde = "1.0.188" # Used in the Map Data into Structs section
futures = "0.3.28"
actix-web = { version = "4", features = ["openssl"] }
actix-multipart = "0.6.1"
actix-files = "0.6.2"
openssl = "0.10.57"
dotenv = "0.15.0"
bytes = "1.5"
env_logger = "0.10.0"
serde_json = "1.0.41"
serde_derive = "1.0.101"
json = "0.12.4"
console = "0.15.7"
derive_more = "0.99.17"
chrono = "0.4.30"
reqwest = { version = "0.11.22", features= ["json"] }
clokwerk = "0.4.0"
jsonwebtoken = "9.2.0"
futures-util = "0.3.28"
async-trait = "0.1.73"
